--- a/src/MeuMenu.Application/MeuMenu.Application.csproj
+++ b/src/MeuMenu.Application/MeuMenu.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="AppServices\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MeuMenu.Domain\MeuMenu.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
