--- a/src/MeuMenu.Infra.Data/MeuMenu.Infra.Data.csproj
+++ b/src/MeuMenu.Infra.Data/MeuMenu.Infra.Data.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Mappings\" />
+    <Folder Include="Repository\Base\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MeuMenu.Domain\MeuMenu.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
