--- a/src/MeuMenu.Api/MeuMenu.Api.csproj
+++ b/src/MeuMenu.Api/MeuMenu.Api.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\MeuMenu.Application\MeuMenu.Application.csproj" />
+    <ProjectReference Include="..\MeuMenu.Infra.Data\MeuMenu.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
