--- a/src/MeuMenu.Api/appsettings.Development.json
+++ b/src/MeuMenu.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MeuMenuDb": "Server=tcp:meu-menu.database.windows.net,1433;Initial Catalog=MeuMenuDb;Persist Security Info=False;User ID=matheus;Password=Amanda14081990#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
   }
 }
