fix: alterando appSettings

--- a/src/MeuMenu.Api/appsettings.Development.json
+++ b/src/MeuMenu.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MeuMenuDb": "Server=tcp:meu-menu.database.windows.net,1433;Initial Catalog=MeuMenuDb;Persist Security Info=False;User ID=matheus;Password=Amanda14081990#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
+    "MeuMenuDb": "Server=tcp:meu-menu.database.windows.net,1433;Initial Catalog=MeuMenuDb;Persist Security Info=False;User ID=aplicacao;Password=jpJ043T5SI#r;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;"
   }
 }
