--- a/src/MeuMenu.Api/MeuMenu.Api.csproj
+++ b/src/MeuMenu.Api/MeuMenu.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -17,6 +18,11 @@
   <ItemGroup>
     <ProjectReference Include="..\MeuMenu.Application\MeuMenu.Application.csproj" />
     <ProjectReference Include="..\MeuMenu.Infra.Data\MeuMenu.Infra.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
