Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
   - task: AzureRmWebAppDeployment@4
     displayName: 'Implantar no Azure App Service'
     inputs:
-      azureSubscription: '8b6f2f6e-284c-48d1-9cfd-b88d0b536777'
+      azureSubscription: 'Assinatura do Visual Studio Enterprise'
       appType: 'webApp'
       WebAppName: 'api-produto'
       package: '$(Build.ArtifactStagingDirectory)/**/*.zip'
