--- a/src/MeuMenu.Application/MeuMenu.Application.csproj
+++ b/src/MeuMenu.Application/MeuMenu.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
   </ItemGroup>
 
   <ItemGroup>
