--- a/src/MeuMenu.Domain/MeuMenu - Backup.Domain.csproj
+++ b/src/MeuMenu.Domain/MeuMenu - Backup.Domain.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Validations\" />
+    <Folder Include="Services\NewFolder\" />
   </ItemGroup>
 
 </Project>
