--- a/src/MeuMenu.Infra.CrossCutting/MeuMenu.Infra.CrossCutting.csproj
+++ b/src/MeuMenu.Infra.CrossCutting/MeuMenu.Infra.CrossCutting.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.5.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Validations\" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.27.0" />
   </ItemGroup>
 
 </Project>
