--- a/src/MeuMenu.Infra.Data/MeuMenu.Infra.Data.csproj
+++ b/src/MeuMenu.Infra.Data/MeuMenu.Infra.Data.csproj
@@ -12,12 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MeuMenu.Domain\MeuMenu.Domain.csproj" />
+    <ProjectReference Include="..\MeuMenu.Infra.CrossCutting\MeuMenu.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
