fix: resolvendo configuração azure no appsettings

--- a/src/MeuMenu.Application/MeuMenu.Application.csproj
+++ b/src/MeuMenu.Application/MeuMenu.Application.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MeuMenu.Domain\MeuMenu.Domain.csproj" />
+    <ProjectReference Include="..\MeuMenu.Infra.CrossCutting\MeuMenu.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
